k8s/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-app-alarm
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
---
apiVersion: v1
kind: Service
metadata:
  name: alarm-service
  namespace: test-app-alarm
  annotations:
    argocd.argoproj.io/sync-wave: "0" 
spec:
  selector: 
    app: alarm-app
  ports: 
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alarm-ingress
  namespace: test-app-alarm
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    argocd.argoproj.io/compare-options: IgnoreExtraneous
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # Для WebSockets (wss://) Nginx зазвичай налаштовується автоматично, 
    # але ці таймаути допоможуть тримати з'єднання активним довше:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: test-app-alarm.barbariska.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alarm-service
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alarm-deployment
  namespace: test-app-alarm
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  selector: 
    matchLabels: 
      app: alarm-app
  template:
    metadata: 
      labels: 
        app: alarm-app
    spec:
      containers:
      - name: alarm-container
        # Використовуємо твій локальний реєстр:
        image: registry.registry.svc.cluster.local:5000/test-app-alarm:build-run-8707a
        imagePullPolicy: IfNotPresent
        ports: 
          - containerPort: 8080
